--- a/index.html
+++ b/index.html
@@ -392,10 +392,8 @@
         <img src="Pre-vetted Expertise.jpg">
       <div class="text-box">
         <h2>Pre-vetted Expertise:</h2>
-        <small>dfsidh</small>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, excepturi, in dolorum iure vero harum labore
-          quis tempore voluptatum odit, minus praesentium illum rerum necessitatibus. Perferendis molestias laudantium
-          nesciunt molestiae?</p>
+        <small>👍</small>
+        <p>Create content effortlessly with pre-selected niche experts who provide ready-made, high-quality material tailored to your specific industry and needs.</p>
           <span class="left-container-arrow"></span>
         </div>
       </div>
@@ -403,11 +401,9 @@
       <div class="container right-container">
         <img src="Pre-vetted Expertise.jpg">
         <div class="text-box">
-          <h2>Pre-vetted Expertise:</h2>
-          <small>dfsidh</small>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, excepturi, in dolorum iure vero harum labore
-            quis tempore voluptatum odit, minus praesentium illum rerum necessitatibus. Perferendis molestias laudantium
-            nesciunt molestiae?</p>
+          <h2> 24/7 Creative Availability:</h2>
+          <small>⌚</small>
+          <p>Your ideas never wait, and neither do we—offering 24/7 support to ensure your creativity and needs are always met.</p>
             <span class="right-container-arrow"></span>
           </div>
         </div>
@@ -415,11 +411,10 @@
         <div class="container left-container">
           <img src="Pre-vetted Expertise.jpg">
           <div class="text-box">
-            <h2>Pre-vetted Expertise:</h2>
-            <small>dfsidh</small>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, excepturi, in dolorum iure vero harum labore
-              quis tempore voluptatum odit, minus praesentium illum rerum necessitatibus. Perferendis molestias laudantium
-              nesciunt molestiae?</p>
+            <h2>All Talents in One Place:</h2>
+            <small>🕶️</small>
+            <p>Access a diverse talent pool effortlessly with one subscription, simplifying content creation and expertise sourcing in a single, seamless solution.
+          </p>
               <span class="left-container-arrow"></span>
             </div>
           </div>
@@ -427,22 +422,18 @@
           <div class="container right-container">
             <img src="Pre-vetted Expertise.jpg">
             <div class="text-box">
-              <h2>Pre-vetted Expertise:</h2>
-              <small>dfsidh</small>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, excepturi, in dolorum iure vero harum labore
-                quis tempore voluptatum odit, minus praesentium illum rerum necessitatibus. Perferendis molestias laudantium
-                nesciunt molestiae?</p>
+              <h2> Global Top Talents:</h2>
+              <small>🌍</small>
+              <p>Effortlessly connect with the brightest minds worldwide, gaining access to top experts, innovators, and creators who bring diverse perspectives, skills, and knowledge to elevate your projects and ideas.</p>
                 <span class="right-container-arrow"></span>
               </div>
             </div>
             <div class="container left-container">
               <img src="Pre-vetted Expertise.jpg">
               <div class="text-box">
-                <h2>Pre-vetted Expertise:</h2>
-                <small>dfsidh</small>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, excepturi, in dolorum iure vero harum labore
-                  quis tempore voluptatum odit, minus praesentium illum rerum necessitatibus. Perferendis molestias laudantium
-                  nesciunt molestiae?</p>
+                <h2> Contract-Free Commitment:</h2>
+                <small>💪</small>
+                <p>No long-term commitments—just flexible, on-demand content creation tailored to your needs, giving you full control over your projects without restrictions or obligations.</p>
                   <span class="left-container-arrow"></span>
                 </div>
               </div>
@@ -450,15 +441,28 @@
               <div class="container right-container">
                 <img src="Pre-vetted Expertise.jpg">
                 <div class="text-box">
-                  <h2>Pre-vetted Expertise:</h2>
-                  <small>dfsidh</small>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, excepturi, in dolorum iure vero harum labore
-                    quis tempore voluptatum odit, minus praesentium illum rerum necessitatibus. Perferendis molestias laudantium
-                    nesciunt molestiae?</p>
+                  <h2>Budget-Friendly Pay-as-You-Go:</h2>
+                  <small>💰</small>
+                  <p>Get cost-effective plans tailored to your budget, starting at just $999 per month, offering premium services, flexibility, and high-quality content creation without long-term commitments—ensuring maximum value for your investment.</p>
                     <span class="right-container-arrow"></span>
                   </div>
                 </div>
     </div>
+  </section>
+
+  <section class="video-file">
+    <div class="video-container">
+      
+      <video controls>
+          <source src="videoplayback.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>
+
+      <video controls>
+          <source src="videoplayback (1).mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>
+  </div>
   </section>
 
 
